--- a/app/src/main/res/layout/activity_login_vendedor.xml
+++ b/app/src/main/res/layout/activity_login_vendedor.xml
@@ -32,32 +32,33 @@
         <!--Email-->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/etMailV"
-                android:hint="@string/etEmailV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ico_email"
                 android:drawablePadding="10dp"
-                android:inputType="textEmailAddress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:hint="@string/etEmailV"
+                android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
         <!--Password-->
         <com.google.android.material.textfield.TextInputLayout
-            android:hint=""
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint=""
             app:passwordToggleEnabled="true">
 
             <EditText
                 android:id="@+id/etPassword"
-                android:hint="@string/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ico_password"
                 android:drawablePadding="10dp"
-                android:inputType="textPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:hint="@string/etPassword"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnLoginV"
