--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="celeste_claro">#85c1e9</color>
     <color name="celeste_oscuro">#5DADE2</color>
+    <color name="amarillo_pasteleria">#FFC107</color>
+    <color name="amarillo_pasteleria_oscuro">#E9DA5C</color>
 
 </resources>
