--- a/app/src/main/res/menu/bottom_nav_bar_cliente_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_bar_cliente_menu.xml
@@ -8,7 +8,7 @@
         />
 
     <item
-        android:id="@+id/op_mis_ordenes_v"
+        android:id="@+id/op_mis_ordenes_c"
         android:title="@string/op_mis_ordenes_c"
         android:icon="@drawable/ico_ordenes"/>
 
