--- a/app/src/main/res/layout/activity_registro_vendedor.xml
+++ b/app/src/main/res/layout/activity_registro_vendedor.xml
@@ -54,7 +54,7 @@
 
             <EditText
                 android:id="@+id/etMailV"
-                android:hint="@string/etEmailV"
+                android:hint="@string/etEmail"
                 android:drawableStart="@drawable/ico_email"
                 android:drawablePadding="5dp"
                 android:inputType="textEmailAddress"
