--- a/app/src/main/res/layout/activity_login_cliente.xml
+++ b/app/src/main/res/layout/activity_login_cliente.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vendedor.LoginVendedorActivity">
+    tools:context=".Cliente.LoginClienteActivity">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -14,14 +14,16 @@
         android:orientation="vertical"
         android:padding="15dp">
 
+        <!-- Título -->
         <TextView
-            android:text="@string/txtloginV"
+            android:text="@string/txtLoginC"
             android:gravity="center"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <!-- Imagen de usuario -->
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
@@ -29,26 +31,26 @@
             android:src="@drawable/logo"
             android:layout_width="80dp"
             android:layout_height="80dp"/>
-        <!--Email-->
+
+        <!-- Email -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/etMailV"
+                android:id="@+id/etMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ico_email"
-                android:drawablePadding="10dp"
+                android:drawablePadding="5dp"
                 android:hint="@string/etEmail"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
-        <!--Password-->
+
+        <!-- Contraseña -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint=""
             app:passwordToggleEnabled="true">
 
             <EditText
@@ -56,13 +58,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ico_password"
-                android:drawablePadding="10dp"
+                android:drawablePadding="5dp"
                 android:hint="@string/etPassword"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- Botón Ingresar -->
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnLoginV"
-            android:text="@string/btnLoginV"
+            android:id="@+id/btnLoginC"
+            android:text="@string/btnLoginC"
             android:textAllCaps="true"
             app:cornerRadius="8dp"
             android:layout_marginTop="15dp"
@@ -70,8 +74,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <!-- Texto no tienes cuenta -->
+        <TextView
+            android:text="@string/txtnoCuenta"
+            android:layout_gravity="end"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-
+        <!-- Registrarme texto -->
+        <TextView
+            android:id="@+id/tvRegistrarC"
+            android:text="@string/tvRegistrarC"
+            android:layout_gravity="end"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:textColor="@color/celeste_oscuro"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
