--- a/app/src/main/res/layout/activity_agregar_producto.xml
+++ b/app/src/main/res/layout/activity_agregar_producto.xml
@@ -63,11 +63,12 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/RV_imagenesProducto"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                tools:listitem="@layout/item_imagenes_seleccionadas"
-                app:spanCount="4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:spanCount="4"
+                tools:listitem="@layout/item_imagenes_seleccionadas" />
+
 
             <!-- Nombres del producto -->
             <com.google.android.material.textfield.TextInputLayout
