--- a/app/src/main/res/layout/item_imagenes_seleccionadas.xml
+++ b/app/src/main/res/layout/item_imagenes_seleccionadas.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     app:cardElevation="0dp"
     app:cardUseCompatPadding="true">
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/item_imagen"
+            android:id="@+id/imagen_item"
             android:layout_width="match_parent"
-            android:layout_height="703dp"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/item_imagen" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/borrar_item"
-            android:layout_width="107dp"
-            android:layout_height="115dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="-7dp"
-            android:padding="10dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:padding="5dp"
             android:src="@drawable/borrar" />
     </RelativeLayout>
 
