--- a/app/src/main/res/menu/nav_drawer_vendedor_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_vendedor_menu.xml
@@ -12,6 +12,11 @@
             android:id="@+id/op_inicio_v"
             android:title="@string/op_inicio_v"
             android:icon="@drawable/ico_inicio"/>
+        <!--Categorias-->
+        <item
+            android:id="@+id/op_categorias_v"
+            android:title="@string/op_categorias_v"
+            android:icon="@drawable/ico_categoria"/>
         <!--Mi tienda-->
         <item
             android:id="@+id/op_mi_tienda_v"
